<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:ignore="SpeakableTextPresentCheck"
    tools:context=".NGO_Package.NGO_Education_Camp.Donor.NGO_edu_user_request_indetails">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/BTN_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/edu_donation"
                android:src="@drawable/round_arrow_back_24"
                app:fabCustomSize="@dimen/_30sdp"
                app:fabSize="mini"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/kanit_medium"
                android:text="Education Stationary Donor Details"
                android:textColor="@color/edu_donation"
                android:textSize="@dimen/_16sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="@dimen/_5sdp"
                app:cardMaxElevation="@dimen/_8sdp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edu_border"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/display_edu_donor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:autoSizeMaxTextSize="@dimen/_15sdp"
                        app:autoSizeMinTextSize="@dimen/_10sdp"
                        app:autoSizeTextType="uniform"
                        android:drawableStart="@drawable/b_per1"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="start|center"
                        android:maxLines="2"
                        android:text="Vrund D savani"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        app:drawableTint="@color/edu_donation"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/display_edu_donor_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:autoLink="phone"
                        android:drawableStart="@drawable/b_phone"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="start|center"
                        android:text="+919876509123"
                        android:textColor="@color/black"
                        android:textColorLink="@color/edu_donation"
                        android:textSize="@dimen/_13sdp"
                        app:drawableTint="@color/edu_donation"
                        tools:ignore="TextSizeCheck,TextContrastCheck"  />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/display_edu_donor_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="start"
                        android:autoLink="email"
                        android:textColorLink="@color/edu_donation"
                        android:drawableStart="@drawable/baseline_alternate_email_24"
                        android:drawablePadding="@dimen/_10sdp"
                        app:drawableTint="@color/edu_donation"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:maxLines="2"
                        android:text="asbjhgdjsfgsjhfdjhs@gmail.com"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        app:autoSizeMaxTextSize="@dimen/_15sdp"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeTextType="uniform"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/display_edu_donor_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:drawableStart="@drawable/b_location"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/inter_semibold"
                        android:gravity="start|center"
                        android:maxLines="4"
                        android:text="Westfall Lawnns, Maxwell Street, Adajan, Surat "
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        app:autoSizeMaxTextSize="@dimen/_13sdp"
                        app:autoSizeMinTextSize="@dimen/_8sdp"
                        app:autoSizeTextType="uniform"
                        app:drawableTint="@color/edu_donation"
                        tools:ignore="TextSizeCheck,TextContrastCheck" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_medium"
                            android:text="@string/food_details"
                            android:textColor="@color/edu_donation"
                            android:textSize="@dimen/_12sdp"
                            tools:ignore="TextSizeCheck" />
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/display_edu_donor_note"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:drawablePadding="@dimen/_10sdp"
                            android:drawableStart="@drawable/baseline_info_24"
                            android:fontFamily="@font/inter_semibold"
                            android:gravity="start"
                            android:maxLines="7"
                            android:text="100 sets of essential stationery items, including notebooks, pens, and pencils"
                            android:textColor="@color/edu_donation"
                            android:textSize="@dimen/_13sdp"
                            app:autoSizeMaxTextSize="@dimen/_13sdp"
                            app:autoSizeMinTextSize="@dimen/_10sdp"
                            app:autoSizeTextType="uniform"
                            app:drawableTint="@color/edu_donation"
                            tools:ignore="TextSizeCheck,TextContrastCheck" />
                    </LinearLayout>


                    <Button
                        android:id="@+id/BTN_edu_donor_call"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="match_parent"
                        android:text="Call"
                        android:textSize="@dimen/_15sdp"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/edu_donation"
                        android:fontFamily="@font/kanit_medium"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="@dimen/_10sdp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="start|center"
                    android:text="@string/important"
                    android:textColor="@color/edu_donation"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="TextSizeCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/round_keyboard_arrow_right_24"
                        android:drawableTint="@color/edu_donation" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="start|center"
                        android:lineSpacingExtra="@dimen/_3sdp"
                        android:text="@string/edu_donation_one"
                        android:textColor="@color/edu_donation"
                        android:textSize="@dimen/_11sdp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/round_keyboard_arrow_right_24"
                        android:drawableTint="@color/edu_donation" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="start|center"
                        android:lineSpacingExtra="@dimen/_3sdp"
                        android:text="@string/edu_donation_two"
                        android:textColor="@color/edu_donation"
                        android:textSize="@dimen/_11sdp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/round_keyboard_arrow_right_24"
                        android:drawableTint="@color/edu_donation" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="start|center"
                        android:lineSpacingExtra="@dimen/_3sdp"
                        android:text="@string/edu_donation_three"
                        android:textColor="@color/edu_donation"
                        android:textSize="@dimen/_11sdp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</LinearLayout>